--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+branches:
+  only:
+    - master
 before_install:
+  - apt-get install subversion
   - git submodule update --init --recursive
 before_script:
   - rake libuv
