--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ branches:
 before_install:
   - sudo apt-get install subversion
   - git submodule update --init --recursive
+  - gem uninstall ffi
 before_script:
   - rake libuv
