--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ext/libuv"]
 	path = ext/libuv
-	url = git://github.com/avalanche123/libuv.git
+	url = https://github.com/joyent/libuv.git
