--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 rvm:
-  - 1.9.2
-  - 1.9.3
+  - "1.9.3"
+  - "2.0.0"
+  - rbx-19mode
+  - jruby-19mode
+  - jruby-20mode
 branches:
   only:
     - master
