allow pipe consumer example to fail on Windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_install:
   - git submodule update --init --recursive
   - echo "yes" | gem uninstall ffi -a
 before_script:
-  - rake libuv
+  - rake compile
