fix build triggering from ext

--- a/ext/Rakefile
+++ b/ext/Rakefile
@@ -6,6 +6,6 @@ require 'uv/tasks'
 task :default => :libuv
 
 desc "Compile libuv from submodule"
-task :libuv => ["ext/libuv.#{FFI::Platform::LIBSUFFIX}"]
-
-CLOBBER.include("ext/libuv.#{FFI::Platform::LIBSUFFIX}")
+task :libuv do
+  system 'cd .. && rake compile'
+end
