--- a/ext/Rakefile
+++ b/ext/Rakefile
@@ -1,18 +1,18 @@
-if ENV['UVRB_USE_GLOBAL'].nil?
+if ENV.has_key?('UVRB_USE_GLOBAL')
+  exit(0)
+else
+  require 'rubygems'
+  require 'ffi'
+  require 'rake/clean'
+  require '../lib/uv/tasks'
 
-	require 'rubygems'
-	require 'ffi'
-	require 'rake/clean'
-	require '../lib/uv/tasks'
+  Dir.chdir File.expand_path("../", __FILE__)
+  Dir.chdir '..'
 
-	Dir.chdir File.expand_path("../", __FILE__)
-	Dir.chdir '..'
+  task :default => :libuv
 
-	task :default => :libuv
+  desc "Compile libuv from submodule"
+  task :libuv => ["ext/libuv.#{FFI::Platform::LIBSUFFIX}"]
 
-	desc "Compile libuv from submodule"
-	task :libuv => ["ext/libuv.#{FFI::Platform::LIBSUFFIX}"]
-
-	CLOBBER.include("ext/libuv.#{FFI::Platform::LIBSUFFIX}")
-
+  CLOBBER.include("ext/libuv.#{FFI::Platform::LIBSUFFIX}")
 end
